ui-ux: Fix 'Blog' section spacing on multiple pages

--- a/css/components/_blog.scss
+++ b/css/components/_blog.scss
@@ -1,4 +1,5 @@
 .blog {
+    padding: 3rem 0;
     background: #f9f9f9;
 
     .blog-list {
