--- a/css/pages/_archive.scss
+++ b/css/pages/_archive.scss
@@ -1,5 +1,3 @@
 .archive {
-    .blog {
-        padding: 1rem 0;
-    }
+    
 }
