--- a/css/pages/homepage.scss
+++ b/css/pages/homepage.scss
@@ -1,5 +1,3 @@
 .page-home {
-    .blog {
-        padding: 4rem 0;
-    }
+    
 }
